force-app/main/default/objects/Mapping__c/fields/AE_User__c.field-meta.xml
<CustomField>
    <fullName>AE_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AE User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Please ensure that the &quot;Team Function&quot; field has been populated correctly on the AE User record.</errorMessage>
        <filterItems>
            <field>AE_SE_Mappings__c.User__r.Team_Function__c</field>
            <operation>equals</operation>
            <value>AE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AE_SE_Mappings__c</referenceTo>
    <relationshipLabel>SE Mappings</relationshipLabel>
    <relationshipName>Mapping1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>