force-app/main/default/objects/Mapping__c/fields/Duration_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_days__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;New&quot;), 0,  IF( ISPICKVAL(Status__c, &quot;Active&quot;), TODAY() -  Start_Date__c,  End_Date__c -Start_Date__c))</formula>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>