force-app/main/default/objects/Mapping__c/fields/Prior_Primary__c.field-meta.xml
<CustomField>
    <fullName>Prior_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Primary</label>
    <type>Checkbox</type>
</CustomField>