force-app/main/default/objects/Mapping__c/fields/SE_User__c.field-meta.xml
<CustomField>
    <fullName>SE_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SE User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Please ensure that the &apos;Team Function&apos; field is populated on the SE User record</errorMessage>
        <filterItems>
            <field>AE_SE_Mappings__c.User__r.Team_Function__c</field>
            <operation>equals</operation>
            <value>SE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AE_SE_Mappings__c</referenceTo>
    <relationshipLabel>AE Mappings</relationshipLabel>
    <relationshipName>Mapping</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>