force-app/main/default/objects/Mapping__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <label>Sub-Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copado Robotic Testing</fullName>
            </value>
            <value>
                <fullName>ClickDeploy, Non-AOV</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>High Tech Strategic</fullName>
            </value>
            <value>
                <fullName>Media+Com+PS+EDU  / CG / Cons+Real Est</fullName>
            </value>
            <value>
                <fullName>Pharma/MedTech</fullName>
            </value>
            <value>
                <fullName>Payer/Provider</fullName>
            </value>
            <value>
                <fullName>Government and Public Sector</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Wealth, Banking, Mortgage &amp; Lending</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>UK, Sweden, Norway, Denmark &amp; Finland</fullName>
            </value>
            <value>
                <fullName>France, Belguim, Spain, Switzerland (FR)</fullName>
            </value>
            <value>
                <fullName>Germany, Switzerland (DE), Netherlands</fullName>
            </value>
            <value>
                <fullName>MFG and Energy</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>