force-app/main/default/objects/Mapping__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US CRT</fullName>
            </value>
            <value>
                <fullName>Essentials &amp; Non-AOV</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>MFG and Energy</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>FINS</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>UK &amp; North Europe</fullName>
            </value>
            <value>
                <fullName>South Europe</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>EMEA CRT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>