force-app/main/default/objects/Mapping__c/fields/Vertical_RVP__c.field-meta.xml
<CustomField>
    <fullName>Vertical_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vertical_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>