force-app/main/default/objects/Mapping__c/validationRules/End_date_must_be_later_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_must_be_later_than_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;=  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date must be before the End Date</errorMessage>
</ValidationRule>