force-app/main/default/objects/Mapping__c/validationRules/Essentials_Non_AOV_Cannot_be_primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Essentials_Non_AOV_Cannot_be_primary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Vertical__c, &quot;Essentials &amp; Non-AOV&quot;),
 Primary__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>Primary__c</errorDisplayField>
    <errorMessage>Essentials &amp; Non-AOV vertical mappings cannot be marked as primary.</errorMessage>
</ValidationRule>