force-app/main/default/objects/Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AE_User__c</columns>
    <columns>SE_User__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <columns>Primary__c</columns>
    <columns>Prior_Primary__c</columns>
    <columns>Vertical__c</columns>
    <columns>Sub_Vertical__c</columns>
    <columns>Vertical_RVP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>